2017-11-24 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-892

	* src/m_optproperties.cc, methods.cc (scat_dataReduceT):
	Added. Work in progress.

	(scat_dataCalc):
	Do check for single-entry, but identical f-grids directly here.

	* src/check_input.[cc,h] (chk_interpolation_grids):
	Allow order=0. Make work for case when old_grod.nelem==1 and order=0.
	Moved check for single-entry, but identical grids grids out again.

	* src/interpolation_poly.cc (interpweights,interp):
	Fixed itw dimension documentation.

	* src/m_psd.cc (psdW16), doc/uguide/interpolation.tex:
	Typos fixed.

2017-11-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-891

	* controlfiles/artscomponents/hybridscat/TestHybrid.arts: Updated.

	* src/m_fos.cc (iyHybrid2): Removed.

	* src/m_fos.cc (iyHybrid): Seems to work!

2017-11-23  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-890

	* src/m_fos.cc (iyHybrid): Adopted to change in
	rtmethods_unit_conversion.

	* src/m_rte.cc (iyEmissionStandard2): Adopted to change in
	rtmethods_unit_conversion.

	* src/rte.cc (rtmethods_unit_conversion): Now also handling ppvar_iy.

2017-11-23  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-889

	* src/matpackI.cc, src/matpackIII.cc, src/matpackIV.cc, src/matpackV.cc,
	src/matpackVI.cc, src/matpackVII.cc:

	Fix bug in move assignment operators. Against my previous assumption,
	the Range objects of the rvalue reference need to be zeroed out.
	There are cases when the rvalue object is reused after being moved.
	For example when inserting into an array, the move assignment is used
	to make space for the new element (but only if the Array has enough
	reserved space, otherwise the copy constructor is used to copy every
	element over to a newly allocated Array). The new element is then
	assigned to the free spot. If the move assignment doesn't zero out the
	Range object, this can lead to a NULL pointer access if the new element