@@ -180,51 +180,51 @@ void iyCalc(
 
 /* Workspace method: Doxygen documentation will be auto-generated */
 void iyEmissionStandard2(
-         Workspace&                  ws,
-         Matrix&                     iy,
-         ArrayOfMatrix&              iy_aux,
-         ArrayOfTensor3&             diy_dx,
-         Vector&                     ppvar_p,
-         Vector&                     ppvar_t,
-         Matrix&                     ppvar_t_nlte,
-         Matrix&                     ppvar_vmr,
-         Matrix&                     ppvar_wind,
-         Matrix&                     ppvar_mag,         
-         Matrix&                     ppvar_f,  
-         Tensor3&                    ppvar_iy,  
-   const Index&                      iy_id,
-   const Index&                      stokes_dim,
-   const Vector&                     f_grid,
-   const Index&                      atmosphere_dim,
-   const Vector&                     p_grid,
-   const Tensor3&                    z_field,
-   const Tensor3&                    t_field,
-   const Tensor4&                    t_nlte_field,
-   const Tensor4&                    vmr_field,
-   const ArrayOfArrayOfSpeciesTag&   abs_species,
-   const Tensor3&                    wind_u_field,
-   const Tensor3&                    wind_v_field,
-   const Tensor3&                    wind_w_field,
-   const Tensor3&                    mag_u_field,
-   const Tensor3&                    mag_v_field,
-   const Tensor3&                    mag_w_field,
-   const Index&                      cloudbox_on,
-   const String&                     iy_unit,
-   const ArrayOfString&              iy_aux_vars,
-   const Index&                      jacobian_do,
-   const ArrayOfRetrievalQuantity&   jacobian_quantities,
-   const ArrayOfArrayOfIndex&        jacobian_indices,
-   const Ppath&                      ppath,
-   const Vector&                     rte_pos2, 
-   const Agenda&                     propmat_clearsky_agenda,
-   const Agenda&                     iy_main_agenda,
-   const Agenda&                     iy_space_agenda,
-   const Agenda&                     iy_surface_agenda,
-   const Agenda&                     iy_cloudbox_agenda,
-   const Index&                      iy_agenda_call1,
-   const Tensor3&                    iy_transmission,
-   const Numeric&                    rte_alonglos_v,
-   const Verbosity&                  verbosity )
+        Workspace&                  ws,
+        Matrix&                     iy,
+        ArrayOfMatrix&              iy_aux,
+        ArrayOfTensor3&             diy_dx,
+        Vector&                     ppvar_p,
+        Vector&                     ppvar_t,
+        Matrix&                     ppvar_t_nlte,
+        Matrix&                     ppvar_vmr,
+        Matrix&                     ppvar_wind,
+        Matrix&                     ppvar_mag,         
+        Matrix&                     ppvar_f,  
+        Tensor3&                    ppvar_iy,  
+  const Index&                      iy_id,
+  const Index&                      stokes_dim,
+  const Vector&                     f_grid,
+  const Index&                      atmosphere_dim,
+  const Vector&                     p_grid,
+  const Tensor3&                    z_field,
+  const Tensor3&                    t_field,
+  const Tensor4&                    t_nlte_field,
+  const Tensor4&                    vmr_field,
+  const ArrayOfArrayOfSpeciesTag&   abs_species,
+  const Tensor3&                    wind_u_field,
+  const Tensor3&                    wind_v_field,
+  const Tensor3&                    wind_w_field,
+  const Tensor3&                    mag_u_field,
+  const Tensor3&                    mag_v_field,
+  const Tensor3&                    mag_w_field,
+  const Index&                      cloudbox_on,
+  const String&                     iy_unit,
+  const ArrayOfString&              iy_aux_vars,
+  const Index&                      jacobian_do,
+  const ArrayOfRetrievalQuantity&   jacobian_quantities,
+  const ArrayOfArrayOfIndex&        jacobian_indices,
+  const Ppath&                      ppath,
+  const Vector&                     rte_pos2, 
+  const Agenda&                     propmat_clearsky_agenda,
+  const Agenda&                     iy_main_agenda,
+  const Agenda&                     iy_space_agenda,
+  const Agenda&                     iy_surface_agenda,
+  const Agenda&                     iy_cloudbox_agenda,
+  const Index&                      iy_agenda_call1,
+  const Tensor3&                    iy_transmission,
+  const Numeric&                    rte_alonglos_v,
+  const Verbosity&                  verbosity )
 {
   // Some basic sizes
   const Index nf = f_grid.nelem();
@@ -315,6 +315,7 @@ void iyEmissionStandard2(
     }
   else
     {
+      // ppvar_iy      
       ppvar_iy.resize(nf,ns,np);
       
       // Basic atmospheric variables
