@@ -1316,6 +1316,411 @@ void iyTransmissionStandard(
 
 
 /* Workspace method: Doxygen documentation will be auto-generated */
+void iyTransmissionStandard2(
+        Workspace&                          ws,
+        Matrix&                             iy,
+        ArrayOfMatrix&                      iy_aux,
+        ArrayOfTensor3&                     diy_dx,
+        Vector&                             ppvar_p,
+        Vector&                             ppvar_t,
+        Matrix&                             ppvar_t_nlte,
+        Matrix&                             ppvar_vmr,
+        Matrix&                             ppvar_wind,
+        Matrix&                             ppvar_mag,         
+        Matrix&                             ppvar_pnd,
+        Matrix&                             ppvar_f,  
+        Tensor3&                            ppvar_iy,  
+  const Index&                              stokes_dim,
+  const Vector&                             f_grid,
+  const Index&                              atmosphere_dim,
+  const Vector&                             p_grid,
+  const Tensor3&                            t_field,
+  const Tensor4&                            t_nlte_field,
+  const Tensor4&                            vmr_field,
+  const ArrayOfArrayOfSpeciesTag&           abs_species,
+  const Tensor3&                            wind_u_field,
+  const Tensor3&                            wind_v_field,
+  const Tensor3&                            wind_w_field,
+  const Tensor3&                            mag_u_field,
+  const Tensor3&                            mag_v_field,
+  const Tensor3&                            mag_w_field,
+  const Index&                              cloudbox_on,
+  const ArrayOfIndex&                       cloudbox_limits,
+  const Tensor4&                            pnd_field,
+  const ArrayOfTensor4&                     dpnd_field_dx,
+  const ArrayOfString&                      scat_species,
+  const ArrayOfArrayOfSingleScatteringData& scat_data,
+  const Index&                              scat_data_checked,
+  const ArrayOfString&                      iy_aux_vars,
+  const Index&                              jacobian_do,
+  const ArrayOfRetrievalQuantity&           jacobian_quantities,
+  const ArrayOfArrayOfIndex&                jacobian_indices,
+  const Ppath&                              ppath,
+  const Agenda&                             propmat_clearsky_agenda,
+  const Agenda&                             iy_transmitter_agenda,
+  const Index&                              iy_agenda_call1,
+  const Tensor3&                            iy_transmission,
+  const Numeric&                            rte_alonglos_v,
+  const Verbosity&                          verbosity )
+{
+  // Some basic sizes
+  const Index nf = f_grid.nelem();
+  const Index ns = stokes_dim;
+  const Index np = ppath.np;
+
+  // Radiative background index
+  const Index rbi = ppath_what_background( ppath );
+  
+  // Checks of input
+  // Throw error if unsupported features are requested
+  if( !iy_agenda_call1 )
+    throw runtime_error( 
+                  "Recursive usage not possible (iy_agenda_call1 must be 1)" );
+  if( !iy_transmission.empty() )
+    throw runtime_error( "*iy_transmission* must be empty" );
+  if( rbi < 1  ||  rbi > 9 )
+    throw runtime_error( "ppath.background is invalid. Check your "
+                         "calculation of *ppath*?" );
+  // for now have that here. when all iy* WSM using scat_data are fixed to new
+  // type scat_data, then put check in (i)yCalc and remove here.
+  if( scat_data_checked != 1 )
+    throw runtime_error(
+      "The scat_data must be flagged to have passed a consistency check"
+      " (scat_data_checked=1)." );
+  if( jacobian_do )
+    {
+      if( dpnd_field_dx.nelem() != jacobian_quantities.nelem() )
+        throw runtime_error(
+          "*dpnd_field_dx* not properly initialized:\n"
+          "Number of elements in dpnd_field_dx must be equal number of jacobian"
+          " quantities.\n(Note: jacobians have to be defined BEFORE *pnd_field*"
+          " is calculated/set." );
+    }
+  // iy_aux_vars checked below
+
+  // Transmitted signal
+  iy_transmitter_agendaExecute( ws, iy, f_grid, 
+                                ppath.pos(np-1,Range(0,atmosphere_dim)),
+                                ppath.los(np-1,joker), iy_transmitter_agenda );
+  if( iy.ncols() != ns  ||  iy.nrows() != nf )
+    {
+      ostringstream os;
+      os << "The size of *iy* returned from *iy_transmitter_agenda* is\n"
+         << "not correct:\n"
+         << "  expected size = [" << nf << "," << stokes_dim << "]\n"
+         << "  size of iy    = [" << iy.nrows() << "," << iy.ncols()<< "]\n";
+      throw runtime_error( os.str() );      
+    }
+  
+  //  Init Jacobian quantities
+  Index   j_analytical_do = 0;
+  if( jacobian_do ) 
+    { FOR_ANALYTICAL_JACOBIANS_DO( j_analytical_do = 1; ) }
+  //
+  const Index     nq = j_analytical_do ? jacobian_quantities.nelem() : 0;
+  ArrayOfTensor3  diy_dpath(nq); 
+  ArrayOfIndex    jac_species_i(nq), jac_scat_i(nq), jac_is_t(nq), jac_wind_i(nq);
+  ArrayOfIndex    jac_mag_i(nq), jac_other(nq), jac_to_integrate(nq);
+  //
+  // Flags for partial derivatives of propmat
+  const PropmatPartialsData ppd(jacobian_quantities);
+  //
+  if( j_analytical_do )
+    {
+      rtmethods_jacobian_init( jac_species_i, jac_scat_i, jac_is_t, jac_wind_i,
+                               jac_mag_i, jac_other, jac_to_integrate, diy_dx,
+                               diy_dpath,
+                               ns, nf, np, nq, abs_species,
+                               scat_species, dpnd_field_dx,
+                               ppd, jacobian_quantities, jacobian_indices,
+                               iy_agenda_call1 );
+    }
+  
+  // Init iy_aux and fill where possible
+  const Index naux = iy_aux_vars.nelem();
+  iy_aux.resize( naux );
+  //
+  for( Index i=0; i<naux; i++ )
+    {
+      iy_aux[i].resize(nf,ns); 
+      
+      if( iy_aux_vars[i] == "Radiative background" )
+        { iy_aux[i] = (Numeric)min( (Index)2, rbi-1 ); }
+      else
+        {
+          ostringstream os;
+          os << "The only allowed strings in *iy_aux_vars* are:\n"
+             << "  \"Radiative background\"\n"
+             << "but you have selected: \"" << iy_aux_vars[i] << "\"";
+          throw runtime_error( os.str() );      
+        }
+    }
+
+  // Get atmospheric and radiative variables along the propagation path
+  //
+  Tensor3 J(np,nf,ns);
+  Tensor4 trans_cumulat(np,nf,ns,ns), trans_partial(np,nf,ns,ns);
+  Tensor5 dtrans_partial_dx_above(np,nq,nf,ns,ns);
+  Tensor5 dtrans_partial_dx_below(np,nq,nf,ns,ns);
+  Tensor4 dJ_dx(np,nq,nf,ns);
+  ArrayOfIndex clear2cloudy;
+  //
+  if( np == 1  &&  rbi == 1 )  // i.e. ppath is totally outside the atmosphere:
+    {
+      ppvar_p.resize(0);
+      ppvar_t.resize(0);
+      ppvar_vmr.resize(0,0);
+      ppvar_t_nlte.resize(0,0);
+      ppvar_wind.resize(0,0);
+      ppvar_mag.resize(0,0);
+      ppvar_pnd.resize(0,0);
+      ppvar_f.resize(0,0);
+      ppvar_iy.resize(0,0,0);
+    }
+  else
+    {
+      // ppvar_iy
+      ppvar_iy.resize(nf,ns,np);
+      ppvar_iy(joker,joker,np-1) = iy;
+      
+      // Basic atmospheric variables
+      get_ppath_atmvars( ppvar_p, ppvar_t, ppvar_t_nlte, ppvar_vmr,
+                         ppvar_wind, ppvar_mag, 
+                         ppath, atmosphere_dim, p_grid, t_field, t_nlte_field, 
+                         vmr_field, wind_u_field, wind_v_field, wind_w_field,
+                         mag_u_field, mag_v_field, mag_w_field );
+      
+      get_ppath_f( ppvar_f, ppath, f_grid,  atmosphere_dim, 
+                   rte_alonglos_v, ppvar_wind );
+
+      // pnd_field
+      ArrayOfMatrix ppvar_dpnd_dx(0);
+      //
+      if( cloudbox_on )
+        {
+          get_ppath_cloudvars( clear2cloudy, ppvar_pnd, ppvar_dpnd_dx,
+                               ppath, atmosphere_dim, cloudbox_limits,
+                               pnd_field, dpnd_field_dx );
+        }
+      else
+        {
+          clear2cloudy.resize(np);
+          for( Index ip=0; ip<np; ip++ )
+            { clear2cloudy[ip] = -1; }
+        }
+      
+      // Size radiative variables always used
+      Vector B(nf);
+      PropagationMatrix K_this(nf,ns), K_past(nf,ns), Kp(nf,ns);
+      StokesVector a(nf,ns), S(nf,ns), Sp(nf,ns);
+      ArrayOfIndex lte(np);
+
+      // Init variables only used if analytical jacobians done
+      Vector dB_dT(0);
+      ArrayOfPropagationMatrix dK_this_dx(nq), dK_past_dx(nq), dKp_dx(nq);
+      ArrayOfStokesVector da_dx(nq), dS_dx(nq), dSp_dx(nq);
+      //
+      if( j_analytical_do )
+        {
+          dB_dT.resize(nf);
+          FOR_ANALYTICAL_JACOBIANS_DO
+            (
+              dK_this_dx[iq] = PropagationMatrix(nf,ns);
+              dK_past_dx[iq] = PropagationMatrix(nf,ns);
+              dKp_dx[iq]     = PropagationMatrix(nf,ns);
+              da_dx[iq]      = StokesVector(nf,ns);
+              dS_dx[iq]      = StokesVector(nf,ns);
+              dSp_dx[iq]     = StokesVector(nf,ns);
+            )
+        }
+
+      // Loop ppath points and determine radiative properties
+      for( Index ip=0; ip<np; ip++ )
+        {
+          get_stepwise_blackbody_radiation( B,
+                                            dB_dT,
+                                            ppvar_f(joker,ip),
+                                            ppvar_t[ip],
+                                            ppd.do_temperature() );
+          
+          get_stepwise_clearsky_propmat( ws,
+                                         K_this,
+                                         S,
+                                         lte[ip],
+                                         dK_this_dx,
+                                         dS_dx,
+                                         propmat_clearsky_agenda,
+                                         jacobian_quantities,
+                                         ppd,
+                                         ppvar_f(joker,ip),
+                                         ppvar_mag(joker,ip),
+                                         ppath.los(ip,joker),
+                                         ppvar_t_nlte(joker,ip),
+                                         ppvar_vmr(joker,ip),
+                                         ppvar_t[ip],
+                                         ppvar_p[ip],
+                                         jac_species_i,
+                                         j_analytical_do );
+
+          if( j_analytical_do )
+            {
+              adapt_stepwise_partial_derivatives( dK_this_dx,
+                                                  dS_dx,
+                                                  jacobian_quantities,
+                                                  ppvar_f(joker,ip),
+                                                  ppath.los(ip,joker),
+                                                  ppvar_vmr(joker,ip),
+                                                  ppvar_t[ip],
+                                                  ppvar_p[ip],
+                                                  jac_species_i,
+                                                  jac_wind_i,
+                                                  lte[ip],
+                                                  atmosphere_dim,
+                                                  j_analytical_do );
+            }
+
+          if( clear2cloudy[ip]+1 )
+            {
+              get_stepwise_scattersky_propmat( a,
+                                               Kp,
+                                               da_dx,
+                                               dKp_dx,
+                                               jacobian_quantities,
+                                               ppvar_pnd(joker,ip),
+                                               ppvar_dpnd_dx,
+                                               ip,
+                                               scat_data,
+                                               ppath.los(ip,joker),
+                                               ppvar_t[ip],
+                                               atmosphere_dim,
+                                               jacobian_do,
+                                               verbosity );
+              a += K_this; 
+              K_this += Kp;
+              
+              if( j_analytical_do )
+                {
+                  FOR_ANALYTICAL_JACOBIANS_DO
+                    (
+                      da_dx[iq] += dK_this_dx[iq];
+                      dK_this_dx[iq] += dKp_dx[iq];
+                    )
+                 }
+            }
+          
+          else // no particles present at this level
+            {
+              a = K_this;
+              if( j_analytical_do )
+                {
+                  FOR_ANALYTICAL_JACOBIANS_DO      
+                    ( da_dx[iq] = dK_this_dx[iq]; )                              
+                }
+            }
+      
+          get_stepwise_transmission_matrix(
+                                 trans_cumulat(ip,joker,joker,joker),
+                                 trans_partial(ip,joker,joker,joker),
+                                 dtrans_partial_dx_above(ip,joker,joker,joker,joker),
+                                 dtrans_partial_dx_below(ip,joker,joker,joker,joker),
+                                 (ip>0)?
+                                   trans_cumulat(ip-1,joker,joker,joker):
+                                   Tensor3(0,0,0),
+                                 K_past,
+                                 K_this,
+                                 dK_past_dx,
+                                 dK_this_dx,
+                                 (ip>0)?
+                                   ppath.lstep[ip-1]:
+                                   Numeric(1.0),
+                                 ip==0 );
+
+          get_stepwise_effective_source( J(ip,joker,joker),
+                                         dJ_dx(ip,joker,joker,joker),
+                                         K_this,
+                                         a,
+                                         S,
+                                         dK_this_dx,
+                                         da_dx,
+                                         dS_dx,
+                                         B,
+                                         dB_dT,
+                                         jacobian_quantities,
+                                         j_analytical_do );
+      
+          swap( K_past, K_this );
+          swap( dK_past_dx, dK_this_dx );
+        }
+    }
+  
+  // Radiative transfer calculations
+  if( np > 1 )
+    {
+      for( Index iv=0; iv<nf; iv++ )
+        {
+          Vector through_level(ns), from_level(ns);
+          Vector dfrom_level_dx(ns);
+          Matrix one_minus_transmission(ns,ns);
+      
+          for( Index ip=np-2; ip>=0; ip-- )
+            {
+        
+              ConstMatrixView T = trans_partial(ip+1,iv,joker,joker);
+        
+              if( j_analytical_do )
+                {
+                  if( stokes_dim > 1 )
+                    { id_mat(one_minus_transmission); }
+                  else 
+                    { one_minus_transmission = 1.; }
+                  one_minus_transmission -= T;
+                }
+
+              from_level = J(ip,iv,joker);
+              from_level += J(ip+1,iv,joker);
+              from_level *= 0.5;
+              through_level = iy(iv,joker);
+              through_level -= from_level;
+
+              if( j_analytical_do )
+                {
+                  FOR_ANALYTICAL_JACOBIANS_DO
+                    (
+                       get_diydx( diy_dpath[iq](ip,iv,joker), 
+                                  diy_dpath[iq](ip+1,iv,joker), 
+                                  one_minus_transmission,
+                                  trans_cumulat(ip,iv,joker,joker), 
+                                  dtrans_partial_dx_above(ip+1,iq,iv,joker,joker), 
+                                  dtrans_partial_dx_below(ip+1,iq,iv,joker,joker), 
+                                  through_level, 
+                                  dJ_dx(ip,iq,iv,joker), 
+                                  dJ_dx(ip+1,iq,iv,joker),
+                                  stokes_dim );
+                     )
+                }
+              
+              // Equation is I1 = T (I0 - 0.5(J_1+J_2)) + 0.5(J_1+J_2)
+              mult( iy(iv,joker), T, through_level );
+              iy(iv,joker) += from_level;
+
+              ppvar_iy(iv,joker,ip) = iy(iv,joker);
+            }
+        }
+    }
+
+  // Map jacobians from ppath to retrieval grids
+  if( j_analytical_do )
+    { 
+      FOR_ANALYTICAL_JACOBIANS_DO( 
+        diy_from_path_to_rgrids( diy_dx[iq], jacobian_quantities[iq], 
+                                 diy_dpath[iq], atmosphere_dim, ppath, ppvar_p );
+      )
+    }
+}
+
+
+
+/* Workspace method: Doxygen documentation will be auto-generated */
 void iy_transmitterMultiplePol(
         Matrix&        iy,
   const Index&         stokes_dim,
