@@ -1,3 +1,12 @@
+2017-11-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-893
+
+	* src/m_transmitter.cc (iyTransmissionStandard2): A start ...
+
+	* src/m_rte.cc (iyEmissionStandard2):
+	* src/m_fos.cc (iyHybrid): Just changes in comments.
+
 2017-11-24 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-892
